--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,7 @@
   	<%= stylesheet_link_tag :all %>
 	<style type="text/css"><%= yield :css %></style>
   
-	<%= javascript_include_tag 'jquery-1.4.2.min.js' %>
-	<%= javascript_include_tag 'ui-utils.js' %>
+	<%= javascript_include_tag 'jquery-1.4.2.min' %>
 	<script type="text/javascript" charset="utf-8"><%= yield :js %></script>
 	<%= csrf_meta_tag %>
 </head>
