--- a/app/views/convenios/index.html.erb
+++ b/app/views/convenios/index.html.erb
@@ -15,7 +15,7 @@
 				<th class="last">&nbsp;</th> 
 			</tr> 
 			<% for convenio in @convenios %>
-			<tr class="<%= @convenios.index(convenio)%2 == 0 ? 'odd' : 'even' %>"> 
+			<tr class="<%= @convenios.index(convenio).even? ? 'odd' : 'even' %>"> 
 				<td><input type="checkbox" class="checkbox" name="id" value="<%= convenio.id %>" /></td>
 				<td><%= h convenio.nome %></td>
 				<td><%= h convenio.telefone %></td>
