--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,15 +45,7 @@
       </div>
       <div id="sidebar">
 
-        <div class="block">
-          <h3>Navegação</h3>
-          <ul class="navigation">
-            <li><a href="#">Opção</a></li>
-            <li><a href="#">Opção</a></li>
-            <li><a href="#">Opção</a></li>
-            <li><a href="#">Opção</a></li>
-          </ul>
-        </div>
+		  <%= yield(:navegacao) %>
 
         <div class="block notice">
           <h4>Notícia</h4>
