--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         <ul class="wat-cf">
           <li><a href="#">Dashboard</a></li>
           <li><a href="#">Pacientes</a></li>
-          <li id="menu-link-convenios"><a href="#">Convênios</a></li>
+          <li id="menu-link-convenios"><a href="<%= convenios_path %>">Convênios</a></li>
           <li><a href="#">Médicos</a></li>
           <li><a href="#">Relatórios</a></li>
         </ul>
