--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           <li><a href="#">Dashboard</a></li>
           <li><a href="#">Pacientes</a></li>
           <li id="menu-link-convenios"><a href="<%= convenios_path %>">Convênios</a></li>
-          <li><a href="#">Médicos</a></li>
+          <li id="menu-link-medicos"><a href="<%= medicos_path %>">Médicos</a></li>
           <li><a href="#">Relatórios</a></li>
         </ul>
       </div>
