--- a/app/views/convenios/_form.html.erb
+++ b/app/views/convenios/_form.html.erb
@@ -6,7 +6,7 @@
 </div>
 
   <div class="group">
-    <label class="label">Nome:</label>
+    <label class="label">Nome*:</label>
     <%= f.text_field :nome, :class => 'text_field' %>
     <span class="description">Ex: 'Amil', 'Blue Life'</span>
   </div>
@@ -30,7 +30,7 @@
   </div>
 
   <div class="group">
-    <label class="label">Telefone:</label>
+    <label class="label">Telefone*:</label>
     <%= f.text_field :telefone, :class => 'text_field' %>
     <span class="description">Ex: '(11) 1111-1111'</span>
   </div>
