--- a/app/views/medicos/_form.html.erb
+++ b/app/views/medicos/_form.html.erb
@@ -1,51 +1,48 @@
 <%= form_for(@medico, :html => { :class => "form"} ) do |f| %>
 <div class="flash"> 
-<div class="message error">
-  <p><%= f.error_messages :header_message => '', :message => 'Os seguintes erros ocorreram:' %></p>
-</div>
+	<div class="message error">
+	  <p><%= f.error_messages :header_message => '', :message => 'Os seguintes erros ocorreram:' %></p>
+	</div>
 </div>
 
-  <div class="group">
-    <label class="label">Nome*:</label>
+	<fieldset class="cadastro">
+		<label>Nome*:</label>
     <%= f.text_field :nome, :class => 'text_field' %>
-  </div>
-
-  <div class="group">
-    <label class="label">CRM*:</label>
-    <%= f.text_field :crm, :class => 'text_field' %>
-    <span class="description">Ex: '55.555'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">Especialidade:</label>
-    <%= f.text_field :especialidade, :class => 'text_field' %>
-    <span class="description">Ex: 'Pediatra'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">Telefone:</label>
-    <%= f.text_field :telefone, :class => 'text_field' %>
-    <span class="description">Ex: '(11) 1111-1111'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">E-mail:</label>
-    <%= f.text_field :email, :class => 'text_field' %>
-    <span class="description">Ex: 'pessoa@medico.com.br'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">Observações</label>
+	
+		<div class="agrupar_campos">
+			<label>CRM*:</label>
+	    <%= f.text_field :crm, :class => 'text_field' %>
+	    <span class="description">Ex: '55.555'</span>
+	  </div>
+	  
+	  <div class="agrupar_campos">
+	  	<label>Especialidade:</label>
+	    <%= f.text_field :especialidade, :class => 'text_field' %>
+	    <span class="description">Ex: 'Pediatra'</span>
+	  </div>
+	
+		<div class="agrupar_campos">
+			<label>Telefone:</label>
+	    <%= f.text_field :telefone, :class => 'text_field' %>
+	    <span class="description">Ex: '(11) 1111-1111'</span>
+		</div>
+		
+		<div class="agrupar_campos">
+			<label>E-mail:</label>
+	    <%= f.text_field :email, :class => 'text_field' %>
+	    <span class="description">Ex: 'pessoa@medico.com.br'</span>
+		</div>
+	
+		<label>Observações</label>
     <%= f.text_area :observacoes, :class => 'text_field' %>
     <span class="description">Ex: 'só atende ortopedia'</span>
-  </div>
-
-  <div class="group navform wat-cf">
-    <button class="button" type="submit">
-      <%= image_tag 'tick.png', :alt => 'Salvar' %> Salvar
-    </button>
-	<%= link_to(medicos_path, :class => 'button') do %>
-      <%= image_tag 'cross.png', :alt => 'Cancelar' %> Cancelar
-    <% end %>
-  </div>
+    
+    <div class="botoes">    
+	    <button class="button" type="submit"><%= image_tag 'tick.png', :alt => 'Salvar' %> Salvar </button>
+			<%= link_to(medicos_path, :class => 'button') do %>
+	      <%= image_tag 'cross.png', :alt => 'Cancelar' %> Cancelar
+	    <% end %>
+	  </div>   	
+	</fieldset>
+  
 <% end %>
