--- a/app/views/convenios/index.html.erb
+++ b/app/views/convenios/index.html.erb
@@ -42,7 +42,7 @@
 <% end %>
 
 <% content_for :navegacao do %>
-<div class="block">
+<div class="block navegacao">
   <h3>Navegação</h3>
   <ul class="navigation">
     <li><a href="<%= new_convenio_path %>">Criar novo convênio</a></li>
