--- a/app/views/convenios/new.html.erb
+++ b/app/views/convenios/new.html.erb
@@ -12,7 +12,7 @@
 </div>
 <% end -%>
 <% content_for :navegacao do %>
-<div class="block">
+<div class="block navegacao">
   <h3>Navegação</h3>
   <ul class="navigation">
     <li><a href="<%= convenios_path %>">Voltar para listagem</a></li>
