--- a/app/views/convenios/_form.html.erb
+++ b/app/views/convenios/_form.html.erb
@@ -1,70 +1,67 @@
 <%= form_for(@convenio, :html => { :class => "form"} ) do |f| %>
-<div class="flash"> 
-<div class="message error">
-  <p><%= f.error_messages :header_message => '', :message => 'Os seguintes erros ocorreram:' %></p>
-</div>
-</div>
+	
+	<% if !f.error_messages.empty? %>
+	<div class="flash"> 
+		<div class="message error">
+		  <p><%=h f.error_messages :header_message => 'Dados inválidos', 
+		  												 :message => 'Os seguintes erros ocorreram:', 
+		  												 :header_tag => :h3 %></p>
+		</div>
+	</div>
+	<% end %>
 
-  <div class="group">
-    <label class="label">Nome*:</label>
+	<fieldset class="cadastro">	
+		<label class="label">Nome*:</label>
     <%= f.text_field :nome, :class => 'text_field' %>
     <span class="description">Ex: 'Amil', 'Blue Life'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">Endereço:</label>
+	
+		<label class="label">Endereço:</label>
     <%= f.text_field :endereco, :class => 'text_field' %>
     <span class="description">Ex: 'Av. Paulista, 123'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">Bairro:</label>
-    <%= f.text_field :bairro, :class => 'text_field' %>
-    <span class="description">Ex: 'Jardins'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">CEP:</label>
-    <%= f.text_field :cep, :class => 'text_field' %>
-    <span class="description">Ex: '12345-789'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">Telefone*:</label>
-    <%= f.text_field :telefone, :class => 'text_field' %>
-    <span class="description">Ex: '(11) 1111-1111'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">Nome do Responsável:</label>
+		
+		<div class="agrupar_campos">
+			<label class="label">Bairro:</label>
+	    <%= f.text_field :bairro, :class => 'text_field' %>
+	    <span class="description">Ex: 'Jardins'</span>
+		</div>
+		
+		<div class="agrupar_campos">
+			<label class="label">CEP:</label>
+	    <%= f.text_field :cep, :class => 'text_field mask_cep' %>
+	    <span class="description">Ex: '12345-789'</span>		
+		</div>
+	
+		<label class="label">Nome do Responsável:</label>
     <%= f.text_field :responsavel, :class => 'text_field' %>
     <span class="description">Ex: 'José da Silva'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">E-mail:</label>
-    <%= f.text_field :email, :class => 'text_field' %>
-    <span class="description">Ex: 'pessoa@convenio.com.br'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">Website:</label>
+	
+		<div class="agrupar_campos">
+			<label class="label">Telefone*:</label>
+    	<%= f.text_field :telefone, :class => 'text_field mask_telefone' %>
+    	<span class="description">Ex: '(11) 1111-1111'</span>
+		</div>
+		
+		<div class="agrupar_campos">
+			<label class="label">E-mail:</label>
+    	<%= f.text_field :email, :class => 'text_field' %>
+    	<span class="description">Ex: 'pessoa@convenio.com.br'</span>
+		</div>
+		
+		<label class="label">Website:</label>
     <%= f.text_field :website, :class => 'text_field' %>
     <span class="description">Ex: 'http://www.convenio.com.br'</span>
-  </div>
-
-  <div class="group">
-    <label class="label">Observações</label>
+	
+		<label class="label">Observações</label>
     <%= f.text_area :observacoes, :class => 'text_field' %>
     <span class="description">Ex: 'só atende ortopedia'</span>
-  </div>
-
-  <div class="group navform wat-cf">
-    <button class="button" type="submit">
-      <%= image_tag 'tick.png', :alt => 'Salvar' %> Salvar
-    </button>
-	<%= link_to(convenios_path, :class => 'button') do %>
-      <%= image_tag 'cross.png', :alt => 'Cancelar' %> Cancelar
-    <% end %>
-  </div>
+	
+		<div class="botoes">
+			<button class="button" type="submit"><%= image_tag 'tick.png', :alt => 'Salvar' %> Salvar</button>
+			<%= link_to(convenios_path, :class => 'button') do %>
+	      <%= image_tag 'cross.png', :alt => 'Cancelar' %> Cancelar
+	    <% end %>
+		</div>
+	
+	</fieldset>
+  
 <% end %>
