--- a/app/views/medicos/_form.html.erb
+++ b/app/views/medicos/_form.html.erb
@@ -1,9 +1,14 @@
 <%= form_for(@medico, :html => { :class => "form"} ) do |f| %>
-<div class="flash"> 
-	<div class="message error">
-	  <p><%= f.error_messages :header_message => '', :message => 'Os seguintes erros ocorreram:' %></p>
+	
+	<% if !f.error_messages.empty? %>
+	<div class="flash"> 
+		<div class="message error">
+		  <p><%=h f.error_messages :header_message => 'Dados inválidos', 
+		  												 :message => 'Os seguintes erros ocorreram:', 
+		  												 :header_tag => :h3 %></p>
+		</div>
 	</div>
-</div>
+	<% end %>
 
 	<fieldset class="cadastro">
 		<label>Nome*:</label>
@@ -23,7 +28,7 @@
 	
 		<div class="agrupar_campos">
 			<label>Telefone:</label>
-	    <%= f.text_field :telefone, :class => 'text_field' %>
+	    <%= f.text_field :telefone, :class => 'text_field mask_telefone' %>
 	    <span class="description">Ex: '(11) 1111-1111'</span>
 		</div>
 		
