--- a/app/views/medicos/edit.html.erb
+++ b/app/views/medicos/edit.html.erb
@@ -12,7 +12,7 @@
 </div>
 <% end -%>
 <% content_for :navegacao do %>
-<div class="block">
+<div class="block navegacao">
   <h3>Navegação</h3>
   <ul class="navigation">
     <li><a href="<%= new_medico_path %>">Criar novo médico</a></li>
