--- a/app/views/medicos/new.html.erb
+++ b/app/views/medicos/new.html.erb
@@ -11,8 +11,9 @@
 	</div>
 </div>
 <% end -%>
+
 <% content_for :navegacao do %>
-<div class="block">
+<div class="block navegacao">
   <h3>Navegação</h3>
   <ul class="navigation">
     <li><a href="<%= medicos_path %>">Voltar para listagem</a></li>
