--- a/app/views/medicos/show.html.erb
+++ b/app/views/medicos/show.html.erb
@@ -1,47 +1,44 @@
-
 <% content_for :conteudo do %>
 
-<div class="block" id="block">
-	
-	<div class="content">
-
-		<%= render :partial => 'shared/avisos' %>
+	<div class="block" id="block">
+		<div class="content">
+			<%= render :partial => 'shared/avisos' %>
+			
+			<div class="inner exibicao_dados">
 				
-   		<h2 class="title"><%=h @medico.nome %></h2>
-		<div class="inner form">
+				<div class="foto">
+					<img src="" alt="FOTO"/>
+					<div class="info">
+						<span class="nome"><%=h @medico.nome %></span>
+						<span class="descricao">CRM:</span><%=h @medico.crm %>
+					</div>
+				</div
+				
+				<div class="info">
+					<p>
+				    <span class="descricao">Especialidade:</span><%=h @medico.especialidade %>
+				  </p>
+				  
+				  <p>
+				    <span class="descricao">Telefone:</span><%=h @medico.telefone %>
+				  </p>
+			    
+			    <p>
+				    <span class="descricao">E-mail:</span><%=h @medico.email %>
+				  </p>
+				  
+				  <p>
+				    <span class="descricao observacoes">Observações:</span><%=h @medico.observacoes %>
+				  </p>
+			  </div>
 
-	<div class="group">
-    <label class="label">CRM:</label>
-    <%=h @medico.crm %>
-  </div>
-  
-  <div class="group">
-    <label class="label">Especialidade:</label>
-    <%=h @medico.especialidade %>
-  </div>
- 
-  <div class="group">
-    <label class="label">Telefone:</label>
-    <%=h @medico.telefone %>
-  </div>
+			  <div class="botoes">
+					<% link_to(medicos_path, :class => 'button') do %>
+			      <%= image_tag 'cross.png', :alt => 'Voltar' %> Voltar
+			    <% end %>
+			  </div>
 
-   <div class="group">
-    <label class="label">E-mail:</label>
-    <%=h @medico.email %>
-  </div>
-
-  <div class="group">
-    <label class="label">Observações</label>
-    <%=h @medico.observacoes %>
-  </div>
-
-  <div class="group navform wat-cf">
-	<% link_to(medicos_path, :class => 'button') do %>
-      <%= image_tag 'cross.png', :alt => 'Voltar' %> Voltar
-    <% end %>
-  </div>
-
+			</div>
 		</div>
 	</div>
-</div>
 <% end -%>
