inicio de implementacao ajax de acoes na listagem

--- a/app/views/medicos/index.html.erb
+++ b/app/views/medicos/index.html.erb
@@ -3,6 +3,18 @@
 
   <div class="content">
     <h2 class="title">Relação de Médicos</h2>
+    
+    <div class="acoes">
+    	<fieldset>
+    		<select id="acoes" name="acoes">
+    			<option>Ativar selecionados</option>
+    			<option>Desativar selecionados</option>
+    		</select>
+    		
+    		<a href="#" class="botao">Executar</a>
+    	</fieldset>
+    </div>    
+    
     <div class="inner">
 	
 		<table class="table"> 
