--- a/public/stylesheets/easyclinica.css
+++ b/public/stylesheets/easyclinica.css
@@ -428,6 +428,10 @@ p, a, label {
 .table tr.odd {
 	background-color: #fff;
 }
+
+.table tr.inativo {
+	background-color: #FDD;
+}
 /* FIM TABLE */
 
 /* INÍCIO FIELDSET */
@@ -472,6 +476,34 @@ p, a, label {
   color:#aaa;
   font-size: 11px;
 }
+
+.acoes {
+	margin: 5px 15px;
+}
+
+.acoes label, .acoes input, .acoes select {
+	float: left;
+	margin-right: 3px;
+}
+
+.botao{
+	padding: 2px 5px;
+  margin-right: 5px; 
+  display: block;
+  float: left;
+  color: #364B69!important;
+  border: 1px solid #ddd;
+  text-decoration: none;
+  -moz-border-radius:5px;
+  font-size:11px;
+}
+
+.botao:hover {
+	color: #444!important;
+  background: #eaeaea;
+  border: 1px solid #576C82;
+}
+
 /* FIM FIELDSET */
 
 /* INÍCIO MESSAGES */
@@ -599,7 +631,7 @@ button.button {
   font-size: 12px;
   padding:4px 10px 3px 7px; /* IE6 */
 }
-button.button[type] {
+button.button[type], input[type="button"] {
   padding:5px 10px 5px 7px; /* Firefox */
   line-height:17px; /* Safari */
 }
