--- a/app/views/convenios/edit.html.erb
+++ b/app/views/convenios/edit.html.erb
@@ -1,4 +1,6 @@
 <% content_for :conteudo do %>
+<script type="text/javascript" language="javascript"> ativar_opcao_menu_principal('convenios'); </script>
+
 <div class="block" id="block">
 	
 	<div class="content">
