--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,12 @@
 	<title><%= @page_title or 'Easy Clínica' %></title>
 	
   <%= stylesheet_link_tag 'reset' %>
+  <%= stylesheet_link_tag 'jquery-ui-1.8.2.custom' %>
   <%= stylesheet_link_tag 'easyclinica' %>
-	<style type="text/css"><%= yield :css %></style>
+  <style type="text/css"><%= yield :css %></style>
   
 	<%= javascript_include_tag 'jquery-1.4.2.min' %>
+	<%= javascript_include_tag 'jquery-ui-1.8.2.custom.min' %>
 	<%= javascript_include_tag 'jquery.maskedinput-1.2.2.min' %>
 	<%= javascript_include_tag 'easyclinica' %>
 	<script type="text/javascript" charset="utf-8"><%= yield :js %></script>
@@ -26,12 +28,12 @@
         </ul>
       </div>
       <div id="main-navigation">
-        <ul class="wat-cf">
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Pacientes</a></li>
+        <ul class="wat-cf" id="menu-principal">
+          <li id="menu-link-dashboard"><a href="#">Dashboard</a></li>
+          <li id="menu-link-pacientes"><a href="#">Pacientes</a></li>
           <li id="menu-link-convenios"><a href="<%= convenios_path %>">Convênios</a></li>
           <li id="menu-link-medicos"><a href="<%= medicos_path %>">Médicos</a></li>
-          <li><a href="#">Relatórios</a></li>
+          <li id="menu-link-relatorios"><a href="#">Relatórios</a></li>
         </ul>
       </div>
     </div>
