--- a/app/views/medicos/show.html.erb
+++ b/app/views/medicos/show.html.erb
@@ -1,4 +1,5 @@
 <% content_for :conteudo do %>
+<script type="text/javascript" language="javascript"> ativar_opcao_menu_principal('medicos'); </script>
 
 	<div class="block" id="block">
 		<div class="content">
