renomeando aba para Servicos

--- a/app/views/convenios/show.html.erb
+++ b/app/views/convenios/show.html.erb
@@ -13,7 +13,7 @@
 				
 				<ul>
 					<li><a href="#dados_gerais">Dados Gerais</a></li>
-					<li><a href="#precos">Preços</a></li>
+					<li><a href="#servicos">Tabela de Serviços</a></li>
 				</ul>
 				
 				<!-- INÍCIO DADOS GERAIS -->
@@ -75,7 +75,7 @@
 				<!-- FIM DADOS GERAIS -->
 			
 				<!-- INÍCIO SERVIÇOS -->
-				<div id="precos">
+				<div id="servicos">
 					<h2 class="title">TUSS</h2>	
 					
 					<div class="inner exibicao_dados">
