--- a/app/views/convenios/_form.html.erb
+++ b/app/views/convenios/_form.html.erb
@@ -51,6 +51,18 @@
     <%= f.text_field :website, :class => 'text_field' %>
     <span class="description">Ex: 'http://www.convenio.com.br'</span>
 	
+	<div class="agrupar_campos">
+		<label class="label">Tabela de Serviços*:</label>
+	<%= f.select :tabela_id, @tabelas.collect{|tabela| [tabela.nome, tabela.id]} %>
+	<span class="description">Ex: 'AMB99'</span>
+	</div>
+	
+	<div class="agrupar_campos">
+		<label class="label">Valor em R$ da CH:</label>
+	<%= f.text_field :email, :class => 'text_field' %>
+	<span class="description">Ex: 'R$ 0.15'</span>
+	</div>
+	
 		<label class="label">Observações</label>
     <%= f.text_area :observacoes, :class => 'text_field' %>
     <span class="description">Ex: 'só atende ortopedia'</span>
